[gd_scene load_steps=7 format=2]

[ext_resource path="res://scipt-lang/visual/main.gd" type="Script" id=1]
[ext_resource path="res://scipt-lang/visual/PopupMenu.gd" type="Script" id=2]
[ext_resource path="res://scipt-lang/visual/Graph.gd" type="Script" id=3]
[ext_resource path="res://scipt-lang/visual/warning.gd" type="Script" id=4]
[ext_resource path="res://scipt-lang/visual/Output.tscn" type="PackedScene" id=5]
[ext_resource path="res://scipt-lang/visual/main.tres" type="Theme" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )

[node name="Graph" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
snap_distance = 5
zoom = 0.657
show_zoom_label = true
script = ExtResource( 3 )

[node name="Output" parent="Graph" instance=ExtResource( 5 )]
margin_left = 459.9
margin_top = 197.107
margin_right = 636.9
margin_bottom = 311.107
rect_scale = Vector2( 0.657, 0.657 )
mouse_filter = 1
offset = Vector2( 700, 300.011 )

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = -384.0
margin_top = 64.0
margin_right = -256.0
margin_bottom = 320.0
submenu_popup_delay = 0.01
script = ExtResource( 2 )

[node name="nodeadd" type="PopupMenu" parent="PopupMenu"]
margin_left = 128.0
margin_right = 248.0
margin_bottom = 256.0
items = [ "Get sensor", null, 0, false, false, 0, 0, null, "", false, "Bool to int", null, 0, false, false, 2, 0, null, "", false, "print", null, 0, false, false, 3, 0, null, "", false, "Add", null, 0, false, false, 3, 0, null, "", false ]
submenu_popup_delay = 0.01

[node name="save" type="FileDialog" parent="."]
margin_left = 216.0
margin_top = 88.0
margin_right = 776.0
margin_bottom = 520.0
window_title = "Save"
access = 1
filters = PoolStringArray( "*.tres" )
current_dir = "user://"
current_path = "user://"

[node name="load" type="FileDialog" parent="."]
margin_left = 216.0
margin_top = 88.0
margin_right = 776.0
margin_bottom = 520.0
window_title = "Open a File"
mode = 0
access = 1
filters = PoolStringArray( "*.tres" )
current_dir = "user://C:/Users/Mobil/Documents/RObo"
current_path = "user://C:/Users/Mobil/Documents/RObo/"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 320.0
margin_top = 224.0
margin_right = 600.0
margin_bottom = 336.0
window_title = "Warning"
script = ExtResource( 4 )

[node name="Label2" type="Label" parent="AcceptDialog"]
anchor_right = 1.0
anchor_bottom = 0.871
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -37.972
text = "This software is in early development.
It might crash."
align = 1
valign = 1

[connection signal="connection_request" from="Graph" to="." method="_on_Graph_connection_request"]
[connection signal="delete_nodes_request" from="Graph" to="." method="_on_Graph_delete_nodes_request"]
[connection signal="disconnection_request" from="Graph" to="." method="_on_Graph_disconnection_request"]
[connection signal="node_selected" from="Graph" to="." method="_on_Graph_node_selected"]
[connection signal="node_unselected" from="Graph" to="." method="_on_Graph_node_unselected"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="id_pressed" from="PopupMenu" to="Graph" method="_on_PopupMenu_id_pressed"]
[connection signal="index_pressed" from="PopupMenu/nodeadd" to="." method="_on_nodeadd_index_pressed"]
[connection signal="file_selected" from="save" to="Graph" method="_on_save_file_selected"]
[connection signal="file_selected" from="load" to="Graph" method="_on_load_file_selected"]
